--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 <body>
 <header class="site-header">
 <div class="container flex between center">
-<a class="brand" href="/">
-<img src="/assets/logo.png" alt="BinBullion logo" class="logo" />
-<span>BinBullion</span>
+<a class="brand" href="./">  <!-- not "/" -->
+  <img src="assets/logo.png" alt="BinBullion logo" class="logo" />
+  <span>BinBullion</span>
 </a>
 <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
 <nav class="nav" id="site-nav">
-<a href="/">Home</a>
-<a href="/about.html">About</a>
-<a href="/contact.html" class="active">Contact</a>
+  <a href="index.html">Home</a>      <!-- or just href="./" -->
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
 </nav>
 </div>
 </header>
