--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <meta name="description" content="About BinBullion jewellery bullion business." />
 <link rel="icon" href="/favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/style.css" />
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header class="site-header">
