feat: Add stylesheet link to all pages and fix relative nav links

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact BinBullion</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BinBullion — Trusted Jewellery Bullion</title>
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@
 <body>
 <header class="site-header">
 <div class="container flex between center">
-<a class="brand" href="./">  <!-- not "/" -->
+<a class="brand" href="./">
   <img src="assets/logo.png" alt="BinBullion logo" class="logo" />
   <span>BinBullion</span>
 </a>
@@ -58,10 +58,10 @@
 <img src="/assets/logo.png" alt="BinBullion logo" class="logo small" />
 <p>© <span id="year"></span> BinBullion. All rights reserved.</p>
 </div>
-<nav>
-<a href="/">Home</a>
-<a href="/about.html">About</a>
-<a href="/contact.html">Contact</a>
+<nav class="nav" id="site-nav">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
 </nav>
 </div>
 </footer>
