--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About BinBullion</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BinBullion — Trusted Jewellery Bullion</title>
   <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
 <body>
 <header class="site-header">
 <div class="container flex between center">
-<a class="brand" href="./">  <!-- not "/" -->
+<a class="brand" href="./">
   <img src="assets/logo.png" alt="BinBullion logo" class="logo" />
   <span>BinBullion</span>
 </a>
@@ -51,7 +51,7 @@
 <p>© <span id="year"></span> BinBullion. All rights reserved.</p>
 </div>
 <nav class="nav" id="site-nav">
-  <a href="index.html">Home</a>      <!-- or just href="./" -->
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
 </nav>
