--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <footer class="site-footer">
 <div class="container footer-grid">
 <div>
-<img src="/assets/logo.png" alt="BinBullion logo" class="logo small" />
+<img src="assets/logo.png" alt="BinBullion logo" class="logo small" />
 <p>© <span id="year"></span> BinBullion. All rights reserved.</p>
 </div>
 <nav class="nav" id="site-nav">
