fix: Change Links

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 <footer class="site-footer">
 <div class="container footer-grid">
 <div>
-<img src="/assets/logo.png" alt="BinBullion logo" class="logo small" />
+<img src="assets/logo.png" alt="BinBullion logo" class="logo small" />
 <p>© <span id="year"></span> BinBullion. All rights reserved.</p>
 </div>
 <nav class="nav" id="site-nav">
@@ -67,6 +67,6 @@
 </footer>
 
 
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
