--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="container">
 <h1>Trusted Jewellery Bullion</h1>
 <p>Buy • Sell • Trade — gold and silver bullion with transparent pricing and reliable service.</p>
-<a href="/contact.html" class="btn btn-primary">Get in touch</a>
+<a href="contact.html" class="btn btn-primary">Get in touch</a>
 </div>
 </section>
 
@@ -54,7 +54,7 @@
 <div class="container">
 <h2>Looking for live quotes?</h2>
 <p>Message us for today’s rates and availability.</p>
-<a href="/contact.html" class="btn">Contact BinBullion</a>
+<a href="contact.html" class="btn">Contact BinBullion</a>
 </div>
 </section>
 </main>
@@ -75,6 +75,6 @@
 </footer>
 
 
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
