--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
 <nav class="nav" id="site-nav">
 <a href="/">Home</a>
-<a href="/about.html" class="active">About</a>
-<a href="/contact.html">Contact</a>
+<a href="about.html" class="active">About</a>
+<a href="contact.html">Contact</a>
 </nav>
 </div>
 </header>
@@ -47,7 +47,7 @@
 <footer class="site-footer">
 <div class="container footer-grid">
 <div>
-<img src="/assets/logo.png" alt="BinBullion logo" class="logo small" />
+<img src="assets/logo.png" alt="BinBullion logo" class="logo small" />
 <p>© <span id="year"></span> BinBullion. All rights reserved.</p>
 </div>
 <nav class="nav" id="site-nav">
@@ -59,6 +59,6 @@
 </footer>
 
 
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
