fix: Change in Home page

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
 <section class="features container grid-3">
 <article class="card">
-<h3>Purity Assured</h3>
-<p>All products verified with hallmark and assay certification.</p>
+<h3>Our Vission</h3>
+<p>To be a leader in responsibly sourced commodity trading and Securing Individuals or Corporates future to reach their financial freedom</p>
 </article>
 <article class="card">
-<h3>Fair Pricing</h3>
-<p>Live market-linked quotes and clear buyback terms.</p>
+<h3>Our Mission</h3>
+<p>To deliver the highest ethical value in terms of Honesty, Trust and Integrity including the social and environmental responsibilities</p>
 </article>
 <article class="card">
-<h3>Secure Handling</h3>
-<p>Discreet packaging and insured delivery options on request.</p>
+<h3>Our Philosophy</h3>
+<p>The immense desire to maintain the above trio qualities, the utmost commitment to excellence in service, the unparalleled dedication to quality is how we define our philosophy.</p>
 </article>
 </section>
 
