fix: Change in Quote

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <section class="cta">
 <div class="container">
-<h2>Looking for live quotes?</h2>
+<h2>Looking for a best deal?</h2>
 <p>Message us for today’s rates and availability.</p>
 <a href="contact.html" class="btn">Contact BinBullion</a>
 </div>
