fix: Change in about

--- a/about.html
+++ b/about.html
@@ -26,21 +26,24 @@
 
 
 <main class="container">
-<h1>About BinBullion</h1>
-<p>BinBullion is a jewellery bullion business focused on transparent pricing and trustworthy service. We trade in gold and silver coins and bars, and we support jewellers and retail buyers with quick settlement and honest advice.</p>
+<h1>WHO WE ARE ?</h1>
+<p>BIN JEWELLERY L.L.C</p>
+<p>With a tradition of more than 30 years combined with real experience in the gold industry, a firm has taken shape in 2017 with the name of BIN JEWELLERY LLC.</p>
+<p>Being located at the Dubai Gold Souq, Deira, Dubai, the heart of gold and bullion trading business for the Middle East and as well as African and Asian markets, gives us the competitive edge and to showcase our expertise in the gold industry.</p>
+White Classic Gold has positioned itself as the best buyer of scrap gold and a one of the leading name in the gold bullion trading in Dubai. The journey so far has been amazing with lot of customer base , being one of the bullion trader and scrap gold buyer in UAE, Classic bullion was able to reach so many milestones White Classic Gold & Diamonds having tremendous experience in Gold bullion trading, gold scrap dealing, Gold wholesale trading, buying old ornaments, importing and exporting of gold. Years of experience, tradition and proficiency in bullion trading has earned white classic a distinct and unique name in the trading of gold products. White Classic Gold is also specialized in refining, smelting as well as assaying of gold with utmost precision and professionalism.
+White Classic Gold & Diamonds is trading with major corporate clients, retailers, international suppliers and manufacturers. Meanwhile white classic has proven the expertise in buying old ornaments and old jewellery items at a very competitive pricing. Over the last decade, these second and third generation business leaders have successfully transformed the company into a premier gold bullion dealers, with prominent outlets and dealing offices at the Gold Souk and supplying gold bars and related items all across UAE and other GCC countries. We offer a full range of gold bars, TT Bars, PAMP Bars, Gold Coins and specialized in 24 Carat gold ornaments.</p>
 
 
-<h2>What we do</h2>
+<h2>What makes us stand out are</h2>
 <ul class="list">
-<li>Buy & sell gold and silver bullion</li>
-<li>Market-linked quotes with fair spreads</li>
-<li>Assay & hallmark verification</li>
-<li>Secure handling and optional insured delivery</li>
+<li>30 + years of experience</li>
+<li>Best gold bullion dealer in Dubai Market</li>
+<li>Leading firm for providing gold physical trading service</li>
+<li>We follow the best industry standards</li>
 </ul>
 
 
-<h2>Why customers choose us</h2>
-<p>We keep things simple: clear quotes, fast communication, and reliable settlement. If you’re a jeweller or investor looking for a steady bullion partner, we’re here to help.</p>
+
 </main>
 
 
