--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <section class="features container grid-3">
 <article class="card">
-<h3>Our Vission</h3>
+<h3>Our Vision</h3>
 <p>To be a leader in responsibly sourced commodity trading and Securing Individuals or Corporates future to reach their financial freedom</p>
 </article>
 <article class="card">
