--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 
 <!-- Option A: simple email link (opens user’s email app) -->
-<p><strong>Email:</strong> <a href="mailto:bingoldllc@gmail">bingoldllc@gmail</a></p>
+<p><strong>Email:</strong> <a href="mailto:bingoldllc@gmail">bingoldllc@gmail.com</a></p>
 <p><strong>Phone/WhatsApp:</strong> <a href="tel:+971 4 271 0056">+971 4 271 0056</a></p>
 <p><strong>Location:</strong> #2 Moosa Hamd Khalfan Al Saudi Bldg. Next to Women's Museum, Gold Souq Deira, Dubai, UAE</p>
 
