--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 </a>
 <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
 <nav class="nav" id="site-nav">
-  <a href="index.html">Home</a>      <!-- or just href="./" -->
+  <a href="index.html">Home</a>     
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
 </nav>
@@ -29,14 +29,13 @@
 <p>Use the form or the details below to reach us for quotes and product availability.</p>
 
 
-<!-- Option A: simple email link (opens user’s email app) -->
+
 <p><strong>Email:</strong> <a href="mailto:bingoldllc@gmail">bingoldllc@gmail.com</a></p>
 <p><strong>Phone/WhatsApp:</strong> <a href="tel:+971 4 271 0056">+971 4 271 0056</a></p>
 <p><strong>Location:</strong> #2 Moosa Hamd Khalfan Al Saudi Bldg. Next to Women's Museum, Gold Souq Deira, Dubai, UAE</p>
 
 
-<!-- Option B: static form using Formspree (replace with your endpoint) -->
-<!-- To use: create a free form endpoint at https://formspree.io/ and replace the action URL below. -->
+
 <form class="contact-form" action="https://formspree.io/f/xkgzdezr" method="POST">
   <label>Your Name
     <input type="text" name="name" required>
