fix: change about form

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 <li>30 + years of experience</li>
 <li>Best gold bullion dealer in Dubai Market</li>
 <li>Leading firm for providing gold physical trading service</li>
-<li>We follow</li>
+<li>We follow the best industry standards</li>
 </ul>
 
 
