fix: change in index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </article>
 <article class="card">
 <h3>Our Philosophy</h3>
-<p>The immense desire to maintain the above trio qualities, the utmost commitment to excellence in service, the unparalleled dedication to quality is how we define our philosophy.</p>
+<p> to maintain the above trio qualities, the utmost commitment to excellence in service, the unparalleled dedication to quality is how we define our philosophy.</p>
 </article>
 </section>
 
