fix: change in index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>To deliver the highest ethical value in terms of Honesty, Trust and Integrity including the social and environmental responsibilities</p>
 </article>
 <article class="card">
-<h3>Our Philosophy</h3>
+<h3> Philosophy</h3>
 <p>The immense desire to maintain the above trio qualities, the utmost commitment to excellence in service, the unparalleled dedication to quality is how we define our philosophy.</p>
 </article>
 </section>
