--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
 
 <main class="container">
-<h1>Contact </h1>
+<h1>Contact Us </h1>
 <p>Use the form or the details below to reach us for quotes and product availability.</p>
 
 
