fix: index Change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>To be a leader in trading responsibly sourced commodity and Securing Individuals or Corporates future to reach their financial freedom</p>
 </article>
 <article class="card">
-<h3>Our Mission</h3>
+<h3> Mission</h3>
 <p>To deliver the highest ethical value in terms of Honesty, Trust and Integrity including the social and environmental responsibilities</p>
 </article>
 <article class="card">
