fix: index Change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </article>
 <article class="card">
 <h3>Our Mission</h3>
-<p>To deliver the highest ethical value in terms of Honesty, Trust and Integrity including the social and environmental responsibilities</p>
+<p> the highest ethical value in terms of Honesty, Trust and Integrity including the social and environmental responsibilities</p>
 </article>
 <article class="card">
 <h3>Our Philosophy</h3>
