fix: index change

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
 
 <p><strong>Email:</strong> <a href="mailto:bingoldllc@gmail">bingoldllc@gmail.com</a></p>
-<p><strong>/WhatsApp:</strong> <a href="tel:+971 4 271 0056">+971 4 271 0056</a></p>
+<p><strong>Phone/WhatsApp:</strong> <a href="tel:+971 4 271 0056">+971 4 271 0056</a></p>
 <p><strong>Location:</strong> #2 Moosa Hamd Khalfan Al Saudi Bldg. Next to Women's Museum, Gold Souq Deira, Dubai, UAE</p>
 
 
