--- a/contact.html
+++ b/contact.html
@@ -26,13 +26,13 @@
 
 <main class="container">
 <h1>Contact Us </h1>
-<p>Use the form or the details below to reach us for quotes and product availability.</p>
+<p> the form or the details below to reach us for quotes and product availability.</p>
 
 
 
 <p><strong>Email:</strong> <a href="mailto:bingoldllc@gmail">bingoldllc@gmail.com</a></p>
 <p><strong>Phone/WhatsApp:</strong> <a href="tel:+971 4 271 0056">+971 4 271 0056</a></p>
-<p><strong>Location:</strong> #2 Moosa Hamd Khalfan Al Saudi Bldg. Next to Women's Museum, Gold Souq Deira, Dubai, UAE</p>
+<p><strong>:</strong> #2 Moosa Hamd Khalfan Al Saudi Bldg. Next to Women's Museum, Gold Souq Deira, Dubai, UAE</p>
 
 
 
