--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <label>Email
     <input type="email" name="email" required>
   </label>
-  <label>Message
+  <label>
     <textarea name="message" rows="6" required></textarea>
   </label>
   <button type="submit" class="btn btn-primary">Send</button>
