--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <h2>What makes us stand out are</h2>
 <ul class="list">
 <li>30 + years of experience</li>
-<li>Best gold bullion dealer in Dubai Market</li>
+<li> gold bullion dealer in Dubai Market</li>
 <li>Leading firm for providing gold physical trading service</li>
 <li>We follow the best industry standards</li>
 </ul>
