--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
 <div class="container flex between center">
 <a class="brand" href="./">
   <img src="assets/logo.png" alt="BinBullion logo" class="logo" />
-  <span>BinBullion</span>
+  <span>Bullion</span>
+  
 </a>
 <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false">☰</button>
 <nav class="nav" id="site-nav">
