--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <nav class="nav" id="site-nav">
 <a href="/">Home</a>
 <a href="about.html" class="active">About</a>
-<a href="contact.html">tact</a>
+<a href="contact.html">Contact</a>
 </nav>
 </div>
 </header>
