fix: about edit

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
 
 
-<h2> makes us stand out are</h2>
+<h2>What makes us stand out are</h2>
 <ul class="list">
 <li>30 + years of experience</li>
 <li>Best gold bullion dealer in Dubai Market</li>
