fix: about edit

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 <main class="container">
 <h1>WHO WE ARE ?</h1>
-<p> JEWELLERY L.L.C</p>
+<p>BIN JEWELLERY L.L.C</p>
 <p>With a tradition of more than 30 years combined with real experience in the gold industry, a firm has taken shape in 2017 with the name of BIN JEWELLERY LLC.</p>
 <p>Being located at the Dubai Gold Souq, Deira, Dubai, the heart of gold and bullion trading business for the Middle East and as well as African and Asian markets, gives us the competitive edge and to showcase our expertise in the gold industry.</p>
 <p>Bin Jewellery L.L.C has positioned itself as the best buyer of scrap gold and a one of the leading name in the gold bullion trading in Dubai. The journey so far has been amazing with lot of customer base , being one of the bullion trader and scrap gold buyer in UAE, bin bullion was able to reach so many milestones Bin Jewellery L.L.C having tremendous experience in Gold bullion trading, gold scrap dealing, Gold wholesale trading, buying old ornaments, importing and exporting of gold.</p>
