--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 <div class="container footer-grid">
 <div>
 <img src="assets/logo.png" alt="BinBullion logo" class="logo small" />
-<p>© <span id="year"></span> BinBullion. All rights reserved</p>
+<p>© <span id="year"></span> BinBullion All rights reserved</p>
 </div>
 <nav class="nav" id="site-nav">
   <a href="index.html">Home</a>
