fix: contact form

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 
 <main class="container">
 <h1>Contact Us </h1>
-<p> the form or the details below to reach us for quotes and product availability.</p>
+<p> the form or the  below to reach us for quotes and product availability.</p>
 
 
 
