--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 <div class="container footer-grid">
 <div>
 <img src="assets/logo.png" alt="BinBullion logo" class="logo small" />
-<p>© <span id="year"></span> BinBullion. All rights reserved.</p>
+<p>© <span id="year"></span> BinBullion. All  reserved.</p>
 </div>
 <nav class="nav" id="site-nav">
   <a href="index.html">Home</a>
