--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <section class="features container grid-3">
 <article class="card">
 <h3>Our Vision</h3>
-<p>To be a leader in trading responsibly sourced commodity and Securing Individuals or Corporates future to reach their financial freedom</p>
+<p>To be a leader in trading responsibly  commodity and Securing Individuals or Corporates future to reach their financial freedom</p>
 </article>
 <article class="card">
 <h3>Our Mission</h3>
