fix: change in index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section class="hero">
 <div class="container">
 <h1>Trusted Jewellery Bullion</h1>
-<p>Buy • Sell • Trade — gold and silver bullion with transparent  and reliable service</p>
+<p>Buy • Sell • Trade — gold and silver bullion with transparent pricing and reliable service</p>
 <a href="contact.html" class="btn btn-primary">Get in touch</a>
 </div>
 </section>
